add basic serializer, fix connection with db
