# shopping/__all_models.py
@@ -1,0 +1,1 @@
+from shopping.models import Product, ShoppingList
